@@ -1,5 +1,10 @@
 2007-03-20  Jürg Billeter  <j@bitron.ch>
 
+	* vapi/glib-2.0.vala: wrap functions for escaping markup strings, patch
+	  by Mathias Hasselmann
+
+2007-03-20  Jürg Billeter  <j@bitron.ch>
+
 	* vala/valacodegenerator.vala: free lists of interfaces correctly, patch
 	  by Mathias Hasselmann
 
